|SOURCE| [GlyphSet] * This class maintains the set of glyphs read from the .glyph file, these are   later used when creating the font file * ReadFromFile iterates over the file passed in and generates a list of lines   to be processed [Main] * PrintUsage prints out a basic usage screen with instructions on the   parameters and formatting the program expects the arguments to be [FontFile] * SetGlyphSet verifies the .glyph file is present on mass storage before   attempting to read from it * Write closes the file (this didn't occur before)

--- a/Source/Makefile
+++ b/Source/Makefile
@@ -107,7 +107,7 @@ VERSIONINFO:
 	@printf "%s" "------------------------- Generating Version Information ---"
 	@printf "%s\n" "-------------------"
 	@mkdir -p Headers
-	@sh ./GitVersion.sh ./Headers/GitVersion.hpp $(PROJECT)
+	@sh ./GitVersion.sh ./Headers/GitVersion.h $(PROJECT)
 	@printf "%s" "------------------------------------------------------------"
 	@printf "%s\n" "-------------------"
 
